--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   mobx: ^1.2.1
   flutter_mobx: ^1.1.0
   provider: ^4.1.3
+  tiengviet: ^0.4.1
+  localstorage: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
