--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   flutter_mobx: ^1.1.0
   provider: ^4.1.3
   unicode: ^0.2.4
-
+  flutter_gradient_colors: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
