--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   provider: ^4.1.3
   unicode: ^0.2.4
   flutter_gradient_colors: ^1.0.0
+  flutter_counter: ^1.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
