--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   unicode: ^0.2.4
   flutter_gradient_colors: ^1.0.0
   flutter_counter: ^1.0.3
+  grouped_buttons: ^1.0.4
+  http_auth: ^0.3.1
+  webview_flutter: ^0.3.14+1
 
 
   # The following adds the Cupertino Icons font to your application.
