--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   grouped_buttons: ^1.0.4
   http_auth: ^0.3.1
   webview_flutter: ^0.3.14+1
+  intl: "^0.16.1"
 
 
   # The following adds the Cupertino Icons font to your application.
