--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   http_auth: ^0.3.1
   webview_flutter: ^0.3.14+1
   intl: "^0.16.1"
+  google_maps_flutter: ^0.5.24+1
+  location: ^2.5.4
+  flutter_polyline_points: ^0.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/
+   - assets/destination_map_marker.png
+   - assets/driving_pin.png
+   - assets/friend1.jpg
+   - assets/friend2.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
