--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_maps_flutter: ^0.5.24+1
   location: ^2.5.4
   flutter_polyline_points: ^0.1.0
+  geocoder: ^0.2.1
+  flutter_rating_bar: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
