--- a/capstone2020_customer_app/pubspec.yaml
+++ b/capstone2020_customer_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   geocoder: ^0.2.1
   flutter_rating_bar: ^3.0.0
   shared_preferences: ^0.4.3
+  circular_countdown_timer: ^0.0.8
+  flutter_otp: ^0.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
